# anharmonic-ir-response

./: .gitignore  CITATION.cff  LICENSE  LICENSE-DATA  Makefile  README.md  VALIDATION_REPORT.md  environment.yml  pyproject.toml
data/processed/: table5_bto.csv  table5_sto.csv  table5a_bto.csv
data/raw/BTO/: README.md  phonon_modes_100K.csv  phonon_modes_200K.csv  phonon_modes_300K.csv  phonon_modes_400K.csv  phonon_modes_500K.csv  phonon_modes_600K.csv
data/raw/literature/: README.md  ShiraneFig4a.csv  ShiraneFig4b.csv  SrTiO3_linewidths_literature.csv
manuscript/: README.md
manuscript/response_letter/: README.md
manuscript/revision_notes/: README.md
notebooks/: README.md
provenance/: PROVENANCE.md
provenance/quantum_espresso_exploratory/: README.md  STATUS.md  checksums_external_raw_data.txt
provenance/quantum_espresso_exploratory/BaTiO3_defect_2x2x2/: ph.in  ph.out  scf.in  scf.out
provenance/quantum_espresso_exploratory/SrTiO3_defect_2x2x2/: ph.in  ph.out  scf.in  scf.out
scripts/: common.py  graphical_abstract_script.py  make_figures.py  make_tables.py  make_validation_figures.py  validate_bto_linewidths.py  validate_sto_literature.py
tables/: table5.csv  table5.md  table5a.csv  table5a.md
tests/: test_reproduce_table5.py
