[project]
name = "anharmonic-ir-response"
version = "0.1.0"
description = "Reproducible data and scripts for mode-resolved dielectric susceptibility and IR absorption in perovskites (BaTiO3, SrTiO3)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Syed Moid" }]
keywords = ["dielectric", "infrared", "anharmonic phonons", "soft mode", "BaTiO3", "SrTiO3", "reproducibility"]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# Scripts are run directly (e.g. `python scripts/make_tables.py`); no build
# backend / package install is required to reproduce the manuscript outputs.
